--- a/app/src/main/res/layout/board.xml
+++ b/app/src/main/res/layout/board.xml
@@ -18,6 +18,11 @@
         </androidx.recyclerview.widget.RecyclerView>
 
         <TextView
+            android:id="@+id/pieceNameText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <TextView
             android:id="@+id/chessText"
             android:layout_width="match_parent"
             android:layout_height="43dp"
@@ -27,43 +32,49 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="102dp"
+            android:layout_height="108dp"
             android:orientation="horizontal">
 
-            <Button
-                android:id="@+id/undoButton"
-                android:layout_width="wrap_content"
-                android:layout_height="71dp"
-                android:layout_weight="1"
-                android:text="UNDO"
-                android:textColorHighlight="@color/teal_700" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="98dp"
+                android:orientation="horizontal">
 
-            <Button
-                android:id="@+id/AIButton"
-                android:layout_width="wrap_content"
-                android:layout_height="71dp"
-                android:text="AI Move" />
+                <Button
+                    android:id="@+id/undoButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="71dp"
+                    android:layout_weight="1"
+                    android:text="UNDO"
+                    android:textColorHighlight="@color/teal_700" />
 
-            <Button
-                android:id="@+id/drawButton"
-                android:layout_width="wrap_content"
-                android:layout_height="71dp"
-                android:layout_weight="1"
-                android:text="DRAW" />
+                <Button
+                    android:id="@+id/AIButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="71dp"
+                    android:text="AI Move" />
 
-            <Button
-                android:id="@+id/resignButton"
-                android:layout_width="wrap_content"
-                android:layout_height="71dp"
-                android:layout_weight="1"
-                android:text="RESIGN" />
+                <Button
+                    android:id="@+id/drawButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="71dp"
+                    android:layout_weight="1"
+                    android:text="DRAW" />
 
+                <Button
+                    android:id="@+id/resignButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="71dp"
+                    android:layout_weight="1"
+                    android:text="RESIGN" />
+
+            </LinearLayout>
         </LinearLayout>
 
         <Button
             android:id="@+id/recordedGamesButton"
             android:layout_width="match_parent"
-            android:layout_height="177dp"
+            android:layout_height="98dp"
             android:layout_weight="1"
             android:text="RECORDED GAMES" />
 
