--- a/app/src/main/res/layout/board.xml
+++ b/app/src/main/res/layout/board.xml
@@ -77,6 +77,12 @@
             android:layout_weight="1"
             android:text="RECORDED GAMES" />
 
+        <Button
+            android:id="@+id/restartButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Restart" />
+
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
