--- a/app/src/main/res/layout/activity_watch_games.xml
+++ b/app/src/main/res/layout/activity_watch_games.xml
@@ -13,7 +13,7 @@
 
         <Button
             android:id="@+id/backButton"
-            android:layout_width="73dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Back" />
 
@@ -22,6 +22,12 @@
             android:layout_width="match_parent"
             android:layout_height="419dp"
             android:numColumns="8" />
+
+        <TextView
+            android:id="@+id/progressText"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:textSize="30dp" />
 
         <Button
             android:id="@+id/nextButton"
